Add boot config settings to enable/disable the usage of the override ini configurations. (custom.datmap.ini, custom.offsets.ini, custom.pointers.ini)

--- a/config/boot/example.ini
+++ b/config/boot/example.ini
@@ -95,6 +95,14 @@ mouse.blockinput                = 0
 mouse.unhook                    = 1
 
 ;---------------------------------------------------------------------------------------------------
+; Ashita Data File Properties
+;---------------------------------------------------------------------------------------------------
+[ashita.data]
+pointers.use_overrides = 1
+offsets.use_overrides = 1
+resources.use_overrides = 1
+
+;---------------------------------------------------------------------------------------------------
 ; Ashita Plugin Properties
 ;---------------------------------------------------------------------------------------------------
 [ashita.plugins]
