Core: Updated ashita.datmap.ini.  - Overhauled the namings to be more consistent with other parts of the project.  - Reorganized the file layout and entries.  - Renamed a handful of entries:
    - ability_names            -> abilities.names
    - ability_descs            -> abilities.descriptions
    - spell_names              -> spells.names
    - spell_descs              -> spells.descriptions
    - spdata                   -> spdata
    - buffs                    -> buffs.names
    - buffs_log                -> buffs.names_log
    - command_help             -> commands.help
    - equipment_slots          -> equipment.slots
    - jobpoint_gifts           -> jobpoints.gifts
    - jobs                     -> jobs.names
    - jobs_abbr                -> jobs.names_abbr
    - keyitems                 -> keyitems.names
    - keyitems_plural          -> keyitems.names_plural
    - keyitems_descriptions    -> keyitems.descriptions
    - monster_abilities        -> monsters.abilities
    - monster_groups           -> monsters.groups
    - monster_groups_plural    -> monsters.groups_plural
    - mount_names              -> mounts.names
    - mount_descriptions       -> mounts.descriptions
    - weather_effects          -> weather.effects
    - zones                    -> zones.names
    - zones_abbreviated        -> zones.names_abbr

    - items_armor              -> items.armor
    - items_armor2             -> items.armor2
    - items_currency           -> items.currency
    - items_general            -> items.general
    - items_general2           -> items.general2
    - items_instinct           -> items.instinct
    - items_monstrosity        -> items.monstrosity
    - items_puppet             -> items.puppet
    - items_slips              -> items.slips
    - items_usable             -> items.usable
    - items_weapons            -> items.weapons

 - Removed unused entry: errors (No one ever used this, no point to parse it.)
 - Added new entries:

    - action.message

--- a/config/ashita/ashita.datmap.ini
+++ b/config/ashita/ashita.datmap.ini
@@ -41,10 +41,13 @@
 ;
 ; Non-Threaded DAT Files
 ;
+; Note: Ashita internally looks for these non-threaded entries by name for some internal work.
+;       If you override these or edit them, their names matter and must match what is here!
+;
 ;---------------------------------------------------------------------------------------------------
 
-[ability_names]
-name        = ability_names
+[abilities.names]
+name        = abilities.names
 type        = 3
 threaded    = 0
 na_id       = 55701
@@ -52,8 +55,8 @@ jp_id       = 55581
 na_param    = 0
 jp_param    = 0
 
-[ability_descriptions]
-name        = ability_descs
+[abilities.descriptions]
+name        = abilities.descriptions
 type        = 3
 threaded    = 0
 na_id       = 55733
@@ -61,8 +64,8 @@ jp_id       = 55613
 na_param    = 0
 jp_param    = 0
 
-[spell_names]
-name        = spell_names
+[spells.names]
+name        = spells.names
 type        = 3
 threaded    = 0
 na_id       = 55702
@@ -70,8 +73,8 @@ jp_id       = 55582
 na_param    = 0
 jp_param    = 0
 
-[spell_descriptions]
-name        = spell_descs
+[spells.descriptions]
+name        = spells.descriptions
 type        = 3
 threaded    = 0
 na_id       = 55734
@@ -99,16 +102,16 @@ jp_param    = 0
 
 ;---------------------------------------------------------------------------------------------------
 ;
-; Threaded DAT Files
+; Threaded DAT Files (Strings / Dialogs)
 ;
 ;---------------------------------------------------------------------------------------------------
 
-[monster_abilities]
-name        = monster_abilities
-type        = 1
+[action.messages]
+name        = action.messages
+type        = 3
 threaded    = 1
-na_id       = 7035
-jp_id       = 7034
+na_id       = 7027
+jp_id       = 7026
 na_param    = 0
 jp_param    = 0
 
@@ -121,26 +124,26 @@ jp_id       = 55572
 na_param    = 0
 jp_param    = 0
 
-[buffs]
-name        = buffs
+[buffs.names]
+name        = buffs.names
 type        = 3
 threaded    = 1
-na_id       = 55732
+na_id       = 55732 ; 55725 alternate id, client uses 55732
 jp_id       = 55605
 na_param    = 0
 jp_param    = 0
 
-[buffs_log]
-name        = buffs_log
+[buffs.names_log]
+name        = buffs.names_log
 type        = 3
 threaded    = 1
-na_id       = 55732
+na_id       = 55732 ; 55725 alternate id, client uses 55732
 jp_id       = -1
 na_param    = 1
 jp_param    = 0
 
-[command_help]
-name        = command_help
+[commands.help]
+name        = commands.help
 type        = 3
 threaded    = 1
 na_id       = 55687
@@ -175,8 +178,9 @@ jp_id       = 55555
 na_param    = 0
 jp_param    = 0
 
-[equipment_slots]
-name        = equipment_slots
+; Contains the slot names with the newer ring1/ear1/etc. usages.
+[equipment.slots]
+name        = equipment.slots
 type        = 3
 threaded    = 1
 na_id       = 55471
@@ -184,12 +188,13 @@ jp_id       = -1
 na_param    = 0
 jp_param    = 0
 
-[errors]
-name        = errors
+; Contains the slot names without the newer ring1/ear1/etc. usages.
+[equipment.slots_old]
+name        = equipment.slots_old
 type        = 3
 threaded    = 1
-na_id       = 55646
-jp_id       = 55526
+na_id       = 55666
+jp_id       = 55546
 na_param    = 0
 jp_param    = 0
 
@@ -202,8 +207,8 @@ jp_id       = 55574
 na_param    = 0
 jp_param    = 0
 
-[jobpoint_gifts]
-name        = jobpoint_gifts
+[jobpoints.gifts]
+name        = jobpoints.gifts
 type        = 3
 threaded    = 1
 na_id       = 55674
@@ -211,8 +216,8 @@ jp_id       = 55554
 na_param    = 0
 jp_param    = 0
 
-[jobs]
-name        = jobs
+[jobs.names]
+name        = jobs.names
 type        = 3
 threaded    = 1
 na_id       = 55467
@@ -220,41 +225,41 @@ jp_id       = 55536
 na_param    = 0
 jp_param    = 0
 
-[jobs_abbreviated]
-name        = jobs_abbr
+[jobs.names_abbr]
+name        = jobs.names_abbr
 type        = 3
 threaded    = 1
 na_id       = 55468
-jp_id       = -1
+jp_id       = 55468 ; Japanese client shares the English abbreviations.
 na_param    = 0
 jp_param    = 0
 
-[keyitems]
-name        = keyitems
+[keyitems.names]
+name        = keyitems.names
 type        = 3
 threaded    = 1
-na_id       = 55697
-jp_id       = 55577
+na_id       = 55697 ; 55695 alternate id
+jp_id       = 55577 ; 55575 alternate id
 na_param    = 4
 jp_param    = 1
 
-[keyitems_descriptions]
-name        = keyitems_descriptions
+[keyitems.names_plural]
+name        = keyitems.names_plural
 type        = 3
 threaded    = 1
-na_id       = 55697
-jp_id       = 55577
-na_param    = 6
-jp_param    = 2
-
-[keyitems_plural]
-name        = keyitems_plural
-type        = 3
-threaded    = 1
-na_id       = 55697
+na_id       = 55697 ; 55695 alternate id
 jp_id       = -1
 na_param    = 5
 jp_param    = 0
+
+[keyitems.descriptions]
+name        = keyitems.descriptions
+type        = 3
+threaded    = 1
+na_id       = 55697 ; 55695 alternate id
+jp_id       = 55577 ; 55575 alternate id
+na_param    = 6
+jp_param    = 2
 
 [merits]
 name        = merits
@@ -265,8 +270,17 @@ jp_id       = 55566
 na_param    = 0
 jp_param    = 0
 
-[monster_groups]
-name        = monster_groups
+[monsters.abilities]
+name        = monsters.abilities
+type        = 1
+threaded    = 1
+na_id       = 7035
+jp_id       = 7034
+na_param    = 0
+jp_param    = 0
+
+[monsters.groups]
+name        = monsters.groups
 type        = 3
 threaded    = 1
 na_id       = 55690
@@ -274,8 +288,8 @@ jp_id       = 55570
 na_param    = 0
 jp_param    = 0
 
-[monster_groups_plural]
-name        = monster_groups_plural
+[monsters.groups_plural]
+name        = monster.groups_plural
 type        = 3
 threaded    = 1
 na_id       = 55690
@@ -292,21 +306,21 @@ jp_id       = 55540
 na_param    = 0
 jp_param    = 0
 
-[mount_descriptions]
-name        = mount_descriptions
-type        = 3
-threaded    = 1
-na_id       = 55682
-jp_id       = 55562
-na_param    = 0
-jp_param    = 0
-
-[mount_names]
-name        = mount_names
+[mounts.names]
+name        = mounts.names
 type        = 3
 threaded    = 1
 na_id       = 55681
 jp_id       = 55561
+na_param    = 0
+jp_param    = 0
+
+[mounts.descriptions]
+name        = mounts.descriptions
+type        = 3
+threaded    = 1
+na_id       = 55682
+jp_id       = 55562
 na_param    = 0
 jp_param    = 0
 
@@ -315,7 +329,7 @@ name        = races
 type        = 3
 threaded    = 1
 na_id       = 55469
-jp_id       = -1
+jp_id       = 55469 ; Japanese client shares the English names.
 na_param    = 0
 jp_param    = 0
 
@@ -346,8 +360,8 @@ jp_id       = 55537
 na_param    = 0
 jp_param    = 0
 
-[weather_effects]
-name        = weather_effects
+[weather.effects]
+name        = weather.effects
 type        = 3
 threaded    = 1
 na_id       = 55657
@@ -355,8 +369,8 @@ jp_id       = -1
 na_param    = 1
 jp_param    = 0
 
-[zones]
-name        = zones
+[zones.names]
+name        = zones.names
 type        = 3
 threaded    = 1
 na_id       = 55465
@@ -364,44 +378,32 @@ jp_id       = 55535
 na_param    = 0
 jp_param    = 0
 
-[zones_abbreviated]
-name        = zones_abbr
+[zones.names_abbr]
+name        = zones.names_abbr
 type        = 3
 threaded    = 1
-na_id       = 55466
+na_id       = 55661
 jp_id       = -1
 na_param    = 0
 jp_param    = 0
 
-[items_general]
-name        = items_general
-type        = 2
+[zones.names_search]
+name        = zones.names_search
+type        = 3
 threaded    = 1
-na_id       = 73
-jp_id       = 4
+na_id       = 55466
+jp_id       = 55466 ; Japanese client shares the English names.
 na_param    = 0
 jp_param    = 0
 
-[items_usable]
-name        = items_usable
-type        = 2
-threaded    = 1
-na_id       = 74
-jp_id       = 5
-na_param    = 0
-jp_param    = 0
+;---------------------------------------------------------------------------------------------------
+;
+; Threaded DAT Files (Items)
+;
+;---------------------------------------------------------------------------------------------------
 
-[items_weapons]
-name        = items_weapons
-type        = 2
-threaded    = 1
-na_id       = 75
-jp_id       = 6
-na_param    = 0
-jp_param    = 0
-
-[items_armor]
-name        = items_armor
+[items.armor]
+name        = items.armor
 type        = 2
 threaded    = 1
 na_id       = 76
@@ -409,35 +411,8 @@ jp_id       = 7
 na_param    = 0
 jp_param    = 0
 
-[items_puppet]
-name        = items_puppet
-type        = 2
-threaded    = 1
-na_id       = 77
-jp_id       = 8
-na_param    = 0
-jp_param    = 0
-
-[items_currency]
-name        = items_currency
-type        = 2
-threaded    = 1
-na_id       = 91
-jp_id       = 9
-na_param    = 0
-jp_param    = 0
-
-[items_slips]
-name        = items_slips
-type        = 2
-threaded    = 1
-na_id       = 55667
-jp_id       = 55547
-na_param    = 0
-jp_param    = 0
-
-[items_armor2]
-name        = items_armor2
+[items.armor2]
+name        = items.armor2
 type        = 2
 threaded    = 1
 na_id       = 55668
@@ -445,8 +420,44 @@ jp_id       = 55548
 na_param    = 0
 jp_param    = 0
 
-[items_monstrosity]
-name        = items_monstrosity
+[items.currency]
+name        = items.currency
+type        = 2
+threaded    = 1
+na_id       = 91
+jp_id       = 9
+na_param    = 0
+jp_param    = 0
+
+[items.general]
+name        = items.general
+type        = 2
+threaded    = 1
+na_id       = 73
+jp_id       = 4
+na_param    = 0
+jp_param    = 0
+
+[items.general2]
+name        = items.general2
+type        = 2
+threaded    = 1
+na_id       = 55671
+jp_id       = 55551
+na_param    = 0
+jp_param    = 0
+
+[items.instinct]
+name        = items.instinct
+type        = 2
+threaded    = 1
+na_id       = 55670
+jp_id       = 55550
+na_param    = 0
+jp_param    = 0
+
+[items.monstrosity]
+name        = items.monstrosity
 type        = 2
 threaded    = 1
 na_id       = 55669
@@ -454,21 +465,39 @@ jp_id       = 55549
 na_param    = 0
 jp_param    = 0
 
-[items_instinct]
-name        = items_instinct
+[items.puppet]
+name        = items.puppet
 type        = 2
 threaded    = 1
-na_id       = 55670
-;jp_id       = 55550
+na_id       = 77
+jp_id       = 8
 na_param    = 0
 jp_param    = 0
 
-[items_general2]
-name        = items_general2
+[items.slips]
+name        = items.slips
 type        = 2
 threaded    = 1
-na_id       = 55671
-jp_id       = 55551
+na_id       = 55667
+jp_id       = 55547
+na_param    = 0
+jp_param    = 0
+
+[items.usable]
+name        = items.usable
+type        = 2
+threaded    = 1
+na_id       = 74
+jp_id       = 5
+na_param    = 0
+jp_param    = 0
+
+[items.weapons]
+name        = items.weapons
+type        = 2
+threaded    = 1
+na_id       = 75
+jp_id       = 6
 na_param    = 0
 jp_param    = 0
 
