Core: Updated ashita.pointers.ini and ashita.offsets.ini to add new job mastery data.

--- a/config/ashita/ashita.offsets.ini
+++ b/config/ashita/ashita.offsets.ini
@@ -93,6 +93,10 @@ offset1 = 0x0002 ; Pointer.
 offset2 = 0x001A ; Job level array 1. (???, WAR, MNK, WHM, BLM, RDM, THF, PLD, DRK, BST, BRD, RNG, SAM, NIN, DRG, SMN)
 offset3 = 0x002B ; Job level array 2. (BLU, COR, PUP, DNC, SCH, GEO, RUN, ???)
 
+[player.jobmasterlevels]
+offset1 = 0x0002 ; Pointer.
+offset2 = 0x001A ; Job master level array.
+
 [player.loginstatus]
 offset1 = 0x0094
 
