--- a/config/ashita/ashita.pointers.ini
+++ b/config/ashita/ashita.pointers.ini
@@ -72,7 +72,6 @@ pattern = 8B0D????????6A??53538B11536A??6A??536A
 offset  = 2
 count   = 0
 
-; Used within the PacketManager; but chat log related..
 [chat.logfile] 
 module  = FFXiMain.dll
 pattern = 50E8????????84C075388B0D
@@ -204,6 +203,12 @@ count   = 2
 [player.joblevels]
 module  = FFXiMain.dll
 pattern = 8B0D????????85C974??8B4424043C1073??25FF000000
+offset  = 0
+count   = 0
+
+[player.jobmasterlevels]
+module  = FFXiMain.dll
+pattern = 8B0D????????85C974??8B4424043C1873??25FF000000
 offset  = 0
 count   = 0
 
