Core: Reordered some entries in ashita.offsets.ini SDK: Overhauled the Memory.h SDK header.  - Added: GetModuleBase, GetModuleSize  - Renamed: GetCallingModule -> GetOwningModule  - Changed: SafeRead, SafeReadPtr (general code clean)  - Removed: SafeReadPtr 'explicit' override for const char*, was not meant to remain in the header.  - Added: Alloc, Free, Protect, Unprotect memory helpers. Core: Updated usages of GetCallingModule to new name GetOwningModule. Core: ChatManager: Fix broken usage of SafeReadPtr from new SDK changes. SDK: Adjust SafeReadPtr to handle pointer types (via type trait) properly. Core: ChatManager: Fix SafeRead/SafeReadPtr usages for updated SDK changes. Core: PacketManager: Fix SafeRead/SafeReadPtr usages for updated SDK changes. Core: Updated the 'chat.parseautotranslate.this' pointer to use the direct offset. Core: Updated the 'chat.parseautotranslate.this' offsets. Core: ChatManager: Fixed ParseAutoTranslate for latest SDK changes of SafeReadPtr. Core: Remove unneeded 'player.petmp' offset. Core: Fixed GetPetMPPercent, GetPetTP memory reading due to new SDK changes to SafeReadPtr. Core: Fixed GetSelectedItemId, GetSelectedItemIndex, GetSelectedItemName memory reading due to new SDK changes to SafeReadPtr. Core: ChatManager: Adjust some memory reading to be safer. Core: Recast: Add safer memory reading. Core: Target: Add safer memory reading. Core: Player: Fixed some memory reading due to SDK changes to SafeReadPtr. Core: Player: Adjusted some memory reading to be safer. Core: AutoFollow: Add safer memory reading. Core: CastBar: Add safer memory reading. Core: Entity: Add safer memory reading. Core: Inventory: Add safer memory reading. Core: Party: Add safer memory reading. Core: Update boot configuration names for various things. Core: Changed how 'ashita.polplugins' section is loaded to not require an ordered list. Core: Fixed silent plugins setting not working on initial load. SDK: ASHITA_INTERFACE_VERSION bumped to 4.08. SDK: IChatManag

--- a/config/ashita/ashita.offsets.ini
+++ b/config/ashita/ashita.offsets.ini
@@ -34,11 +34,6 @@
 ;
 ;---------------------------------------------------------------------------------------------------
 
-[chat.parseautotranslate.this]
-offset1 = 0x0013
-offset2 = 0x7E30
-offset3 = 0x003C
-
 [chat.inputtext]
 inputtext.main              = 0x7E30 ; The main input text offset.
 inputtext.state             = 0xF108 ; The state of the input text. (Used to determine if open.)
@@ -57,6 +52,11 @@ offset1 = 0x0000 ; Reads the pointer from the function opcodes.
 offset2 = 0x0000 ; Reads the pointer value.
 offset3 = 0x0004 ; Reads the offset of the desired object from its parent.
 offset4 = 0x02F4 ; Offset to the 'TEMP' file path.
+
+[chat.parseautotranslate.this]
+offset1 = 0x0000
+offset2 = 0x0000
+offset3 = 0x7E6C ; 0x7E30 + 0x003C
 
 ;---------------------------------------------------------------------------------------------------
 ;
@@ -100,18 +100,15 @@ offset2 = 0x001A ; Job master level array.
 [player.loginstatus]
 offset1 = 0x0094
 
-[player.petmp]
-offset1 = 0x0000
-
 [player.pettp]
 offset1 = 0x000C
-
-[target.target]
-offset1 = 0x02F4 ; Offset to raw structure.
 
 [target.settarget]
 offset1 = 0x0002 ; Pointer to 'this' object.
 offset2 = 0x0016 ; Offset to call.
 offset3 = 0x0017 ; Offset to call. (Calculated jump.)
+
+[target.target]
+offset1 = 0x02F4 ; Offset to raw structure.
 
 ; Fin! ~
