SDK: Fixed a few small typos in unknowns. Core: Fix incorrect item parse type when handling Instinct items.
SDK: ASHITA_INTERFACE_VERSION bumped to 4.07
SDK: IPlayer: Added GetJobMasterFlags and GetJobMasterLevel.
Core: Added new pointers/offsets for job master level data.
Core: Implemented support for new SDK IPlayer features.
Core: Updated the default.txt script that will be bundled with Ashita.
Core: Heavily overhauled the ashita.datmap.ini file.
 -> Renamed a lot of entries within the file to be more consistent with naming schemes.
 -> Changed the naming of some entries to better match their intention.
 -> Added some new entries.
 -> Removed unused 'errors' entry. (Waste of used memory as no one uses this anyway.)
 -> Added JP DAT ids for some entries where the JP client shares the NA DAT info.
Core: Updated the ResourceManager to reflect these changes.
Core: Reordered some entries in ashita.offsets.ini
SDK: Overhauled the Memory.h SDK header.
 - Added: GetModuleBase, GetModuleSize
 - Renamed: GetCallingModule -> GetOwningModule
 - Changed: SafeRead, SafeReadPtr (general code clean)
 - Removed: SafeReadPtr 'explicit' override for const char*, was not meant to remain in the header.
 - Added: Alloc, Free, Protect, Unprotect memory helpers.
Core: Updated usages of GetCallingModule to new name GetOwningModule.
Core: ChatManager: Fix broken usage of SafeReadPtr from new SDK changes.
SDK: Adjust SafeReadPtr to handle pointer types (via type trait) properly.
Core: ChatManager: Fix SafeRead/SafeReadPtr usages for updated SDK changes.
Core: PacketManager: Fix SafeRead/SafeReadPtr usages for updated SDK changes.
Core: Updated the 'chat.parseautotranslate.this' pointer to use the direct offset.
Core: Updated the 'chat.parseautotranslate.this' offsets.
Core: ChatManager: Fixed ParseAutoTranslate for latest SDK changes of SafeReadPtr.
Core: Remove unneeded 'player.petmp' offset.
Core: Fixed GetPetMPPercent, GetPetTP memory reading due to new SDK changes to SafeReadPtr.
Core:

--- a/config/ashita/ashita.offsets.ini
+++ b/config/ashita/ashita.offsets.ini
@@ -82,11 +82,13 @@ index.offset3   = 0x0026
 
 [player.hasability]
 offset1 = 0x0001 ; Pointer.
-offset2 = 0x001E ; Data array offset.
+offset2 = 0x000B ; Data loaded offset.
+offset3 = 0x001E ; Data array offset.
 
 [player.hasspell]
 offset1 = 0x0001 ; Pointer.
-offset2 = 0x0018 ; Data array offset.
+offset2 = 0x000C ; Data loaded offset.
+offset3 = 0x0018 ; Data array offset.
 
 [player.joblevels]
 offset1 = 0x0002 ; Pointer.
