Update boot config comments for some registry related data.

--- a/config/boot/example.ini
+++ b/config/boot/example.ini
@@ -365,7 +365,8 @@ behaviorflags.fpu_preserve                      = 0
 ; ffxi.registry
 ;
 ; Contains configuration settings used to override Final Fantasy XI's registry settings. These settings
-; take priority over what is actually within the system registry for the game.
+; take priority over what is actually within the system registry for the game. A value of -1 means that
+; Ashita will default to what value is already in the real registry for the given setting.
 ;
 ;   0000 - (number) Default: -1
 ;       Mip Mapping
@@ -477,7 +478,10 @@ behaviorflags.fpu_preserve                      = 0
 ;       Window Mode
 ;
 ;       0 = Fullscreen, 1 = Windowed, 3 = Borderless Windowed
-;       2 = Fullscreen Windowed (Undocumented, not recommended.)
+;       2 = Fullscreen Windowed (Undocumented.)
+;
+;       Note: There is a bug in the official client handling of this setting where 'Borderless Windowed' is
+;       actually 'Fullscreen Windowed', and 'Fullscreen Windowed' is actually 'Borderless Windowed'.
 ;
 ;   0035 - (number) Default: -1
 ;       Sound Always On (Play In Background)
@@ -515,7 +519,7 @@ behaviorflags.fpu_preserve                      = 0
 ;       0 = Disabled, 1 = Enabled
 ;       (Not in the retail client.)
 ;
-;   0042 - (number) Default: -1
+;   0042 - (string) Default: -1
 ;       Default Game Screenshot Path
 ;
 ;   0043 - (number) Default: -1
@@ -524,6 +528,10 @@ behaviorflags.fpu_preserve                      = 0
 ;       0 = Off, 1 = On
 ;
 ;   0044 - (number) Default: -1
+;       Maintain Window Aspect Ratio
+;
+;       0 = Off, 1 = On
+;
 ;   0045 - (number) Default: -1
 ;       Unknown / Unused
 ;
